Updated content in about me and projects section.  added pictures to projects section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -74,11 +74,7 @@
                 <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid" alt="good boi">
             </div>
             <div class="col-sm m-2 p-2">
-                I am a business development professional with experience working with large corporate
-                    giants
-                    as well as extensive experience operating and managing a growing small business. His interests in
-                    technology have spanned back to the 56k modem and his commitment to learning is unmatched by his
-                    peers.
+                I am a business development professional with more than 10 years of experience working for and with fortune 500 companies as well as operating and managing a growing small business with 30+ employees, multiple locations and over 1 million in annual sales. My fascination with technology dates back well before the invention of the 56k modem and has led me to grow skills in web and software development.  What's my next move? Blockchain development, NFT's and web3 is where you will find me.
             </div>
         </div>
     </div>
@@ -103,18 +99,14 @@
                 </div>
             </div>
             <div class="col-sm-4 text-center rounded-circle">
-                <h3>Web Development</h3>
-                <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
-                     class="img-fluid d-block rounded-circle" alt="rare paleta pal" width="200" height="200">
+                <h3>Creative Services</h3>
+                <a href="https://imgflip.com/i/5thfwl"><img src="https://i.imgflip.com/5thfwl.jpg" class="img-fluid d-block rounded-circle" alt="rare paleta pal" width="200" height="200" title="Social Media Help"/></a><div><a href="https://imgflip.com/memegenerator"></a></div>
                 <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
-                    <p> The internet is not just a passing fad and it's safe to say it is here to stay. Connect with me
-                        to
-                        see how I can help you with your technology based solutions to include web and mobile site
-                        development, Salesforce implementations and more. </p>
+                    <p> You can have the greatest product known to man but if you don't market it effectively to the correct audience no one will know.  Utilizing high engagement social channels can bring amazing results and we are experts in building strong online presence for your company.</p>
                 </div>
             </div>
             <div class="col-sm-4 text-center">
-                <h3>Web 3 Development</h3>
+                <h3>web3/NFT/Blockchain</h3>
                 <img src="documentation/img/PaletaPal(rare).png"
                      class="img-fluid d-block rounded-circle" alt="rare paleta pal">
                 <div class="border p-2 bg-light rounded mt-4 d-inline-flex" style="width: 250px">
@@ -133,7 +125,18 @@
     <!--//Contact Form//-->
 <h2 class="ml-5 display-4" id="contactForm"> Contact Me</h2>
     <div class="container border">
+        <div class="row m-1">
+            <h4 class="display-4">Let's connect.  Follow my social channels or send me a quick message on how we can work together..or just say Hi</h4>
+            <div class="col-sm-4">
         <a class="nav-link" href="https://www.linkedin.com/in/socialnetwork/"><img src="documentation/img/linkedin.svg" width="50px" height="50px" alt="Carlos' LinkedIn link"></a>
+            </div>
+            <div class="col-sm-4">
+                <a class="nav-link" href="https://github.com/CLOVETHEDESTROYER"><img src="documentation/img/github.svg" width="50px" height="50px" alt="Carlos' LinkedIn link"></a>
+            </div>
+            <div class="col-sm-4">
+                <a class="nav-link" href="https://www.linkedin.com/in/socialnetwork/"><img src="documentation/img/twitter.svg" width="50px" height="50px" alt="Carlos' LinkedIn link"></a>
+            </div>
+        </div>
         <form action="./apis/" class="m-5 p-3" id="contact" method="post" novalidate>
             <div class="form-row">
                 <div class="col-sm-4 mb-3">
@@ -198,7 +201,7 @@
 <!-- Google Recaptcha-->
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-<-- custom jquery script-->
+<!--<&#45;&#45; custom jquery script&ndash;&gt;-->
 
 <script src="script.js"></script>
 
