wrote additional copy for About me section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -96,6 +96,10 @@
                         people with over 1 million in annual sales. He knows how to implement successful business
                         strategies
                         and data analysis to increase sales and grow your business. </p>
+                    <br>
+                    <p> Outside of business Carlos also likes finance.  Wait, isn't that still business?  Yes, it is and I love it.  I have been studying the financial markets since 2005 and received a degree with a concentration in Finance from the Anderson School of Management in 2008.  I genuinly enjoy researching companies and different asset classes because I love the science of business and how to effectively use data to your advantage.  </p>
+                    <br>
+                    <p>Before business, I loved music and I still do.  </p>
                 </div>
             </div>
             <div class="col-sm-4 text-center rounded-circle">
