--- a/public_html/index.html
+++ b/public_html/index.html
@@ -41,6 +41,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/CLOVETHEDESTROYER"><img src="documentation/img/github.svg" width="16px" height="16px" alt="Carlos' Github link"></a></li>
             </li>
+        </ul>
     </nav>
 </header>
 <div data-spy="scroll" data-target="#scrollID" data-offset="0">
@@ -49,13 +50,20 @@
         <div class="container-fluid">
             <div class="row text-dark">
                 <div class="card">
-                    <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez"
-                         class="p-3 mb-2 img-responsive card-img">
-                    <div class="col-4 offset-6 card-img-overlay text-white d-flex justify-content-center align-items-baseline mr-3 p-5">
+                    <img src="documentation/img/closeUpDeskFinal.jpg" alt="Carlos Alvarez"
+                         class="p-3 mb-2 img-responsive card-img" usemap="#image-map">
+
+                    <map name="image-map">
+                        <area alt="Pop Fizz" title="Pop Fizz" href="www.popfizzabq.com" coords="4864,2246,5359,3315" shape="rect">
+                        <area target="_self" alt="About Me" title="About Me" id="#About" coords="3207,5,5995,2159" shape="rect">
+                        <area target="_self" alt="Generative Art Project" title="Generative Art Project" href="www.popfizzabq.com" coords="2205,1294,3090,2678" shape="rect">
+                        <area target="_self" alt="LinkedIN" title="LinkedIN" href="linkedin.com/socialnetwork" coords="3232,2221,4126,3218" shape="rect">
+                    </map>
+                  <!--  <div class="col-4 offset-6 card-img-overlay text-white d-flex justify-content-center align-items-baseline mr-3 p-5">
                         <h4>Hello, I'm</h4>
                         <br>
                         <h2 class="display-4">Carlos Alvarez</h2>
-                    </div>
+                    </div>-->
 
                 </div>
                 </div>
@@ -71,10 +79,14 @@
     <div class="container-fluid bg-light p-2">
         <div class="row">
             <div class="col-sm m-2 p-2" id="About">
-                <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid" alt="good boi">
+                <img src="documentation/img/Carlos%20Fall%202021.2.jpg" class="img-fluid" alt="good boi">
             </div>
             <div class="col-sm m-2 p-2">
                 I am a business development professional with more than 10 years of experience working for and with fortune 500 companies as well as operating and managing a growing small business with 30+ employees, multiple locations and over 1 million in annual sales. My fascination with technology dates back well before the invention of the 56k modem and has led me to grow skills in web and software development.  What's my next move? Blockchain development, NFT's and web3 is where you will find me.
+                <br>
+                <p> Outside of business Carlos also likes finance.  Wait, isn't that still business?  Yes, it is and I love it.  I have been studying the financial markets since 2005 and received a degree with a concentration in Finance from the Anderson School of Management in 2008.  I genuinly enjoy researching companies and different asset classes because I love the science of business and how to effectively use data to your advantage.  </p>
+                <br>
+                <p>Before business, I loved music and I still do.  </p>
             </div>
         </div>
     </div>
@@ -96,10 +108,6 @@
                         people with over 1 million in annual sales. He knows how to implement successful business
                         strategies
                         and data analysis to increase sales and grow your business. </p>
-                    <br>
-                    <p> Outside of business Carlos also likes finance.  Wait, isn't that still business?  Yes, it is and I love it.  I have been studying the financial markets since 2005 and received a degree with a concentration in Finance from the Anderson School of Management in 2008.  I genuinly enjoy researching companies and different asset classes because I love the science of business and how to effectively use data to your advantage.  </p>
-                    <br>
-                    <p>Before business, I loved music and I still do.  </p>
                 </div>
             </div>
             <div class="col-sm-4 text-center rounded-circle">
@@ -141,7 +149,7 @@
                 <a class="nav-link" href="https://www.linkedin.com/in/socialnetwork/"><img src="documentation/img/twitter.svg" width="50px" height="50px" alt="Carlos' LinkedIn link"></a>
             </div>
         </div>
-        <form action="./apis/" class="m-5 p-3" id="contact" method="post" novalidate>
+        <form id="contact" action="./apis/" method="post" novalidate class="m-5 p-3">
             <div class="form-row">
                 <div class="col-sm-4 mb-3">
                     <label for="firstName">First name</label>
@@ -184,14 +192,16 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"
-        integrity="sha512-37T7leoNS06R80c8Ulq7cdCDU5MNQBwlYoy1TX/WUsLFC2eYNqtKlV0QjH7r8JpG/S0GUMZwebnVFLPd6SU5yg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/additional-methods.min.js"
-        integrity="sha512-XZEy8UQ9rngkxQVugAdOuBRDmJ5N4vCuNXCh8KlniZgDKTvf7zl75QBtaVG1lEhMFe2a2DuA22nZYY+qsI2/xA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Jquery and Bootstrap Dependencies -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!-- Make sure to use Jquery min and not the slim version provided by Bootstrap -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA="
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
+<script crossorigin="anonymous" integrity="sha256-F6h55Qw6sweK+t7SiOJX+2bpSAa3b/fnlrVCJvmEj1A="
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+<script crossorigin="anonymous" integrity="sha256-0Yg/eibVdKyxkuVo1Qwh0DspoUCHvSbm/oOoYVz32BQ="
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
 <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>-->
