updated styling and responsiveness

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -60,7 +60,7 @@
             <div class="row text-dark">
                 <div>
                     <img src="documentation/img/photos/closeUpDeskFinal-min.jpg" alt="Carlos' Desk"
-                         class="mb-3 img-responsive" usemap="#image-map">
+                         class="mb-3 img-responsive img-main" usemap="#image-map">
                     <map name="image-map" class="nav-link scroll-id">
                         <area target="_self" alt="About Me" title="About Me" href="#About"
                               coords="3265,228,5984,42,5995,2159,3154,2074" shape="poly">
@@ -92,15 +92,15 @@
     <!--Skills-->
     <section>
         <div class="container-fluid">
-            <div class="row p-4">
+            <div class="row p-4 img-fluid">
                 <div class="col">
                     <h6>Current Languages:</h6>
                 </div>
                 <div class="col">
-                    <img src="documentation/img/logosAndBadges/js.png" alt="javascript" width="50rem" height="50rem">
+                    <img src="documentation/img/logosAndBadges/js.png" alt="javascript" width="50em" height="50em">
                 </div>
                 <div class="col">
-                    <img src="documentation/img/logosAndBadges/react.png" alt="react" width="50rem" height="50rem">
+                    <img src="documentation/img/logosAndBadges/react.png" alt="react" width="50em" height="50em">
                 </div>
                 <div class="col">
                     <img src="documentation/img/logosAndBadges/html.png" alt="html5" width="50rem" height="50rem">
@@ -120,18 +120,18 @@
                     <img src="documentation/img/logosAndBadges/ps.png" alt="photoshop" width="50rem" height="50rem">
                 </div>
                 <div class="col">
-                    <img src="documentation/img/logosAndBadges/pr.png" alt="adobe premier" width="50rem" height="50rem">
+                    <img src="documentation/img/logosAndBadges/pr.png" alt="adobe premier" width="40rem" height="40rem" class="mt-2">
                 </div>
             </div>
             <div class="row p-4">
-                <div class="col-2">
-                    <h6>Future languages</h6>
+                <div class="col">
+                    <h6>Future languages:</h6>
                 </div>
-                <div class="col-2">
-                    <img src="documentation/img/logosAndBadges/python_icon.png" alt="python" width="40rem"
-                         height="40rem">
+                <div class="col">
+                    <img src="documentation/img/logosAndBadges/python_icon.png" alt="python" width="25rem"
+                         height="25rem">
                 </div>
-                <div class="col-2">
+                <div class="col">
                     <img src="documentation/img/logosAndBadges/solidity.png" alt="solidity" width="20rem"
                          height="20rem">
                 </div>
@@ -146,7 +146,7 @@
     <div class="clearfix bg-info text-light max-width: 100% m-4 p-2 aboutgrad" id="About">
         <h2 class="mx-5 display-4">About Carlos</h2>
         <img src="documentation/img/photos/Carlos%20Fall%202021.2.jpg"
-             class="mx-4 d-block col-md-6 float-start p-2" alt="Carlos Alvarez">
+             class="mx-4 d-block col-md-6 float-start p-2 aboutimg" alt="Carlos Alvarez">
         <!--<div class="col-4 offset-6 card-img-overlay text-white d-flex justify-content-center mr-3 p-5">
                             <h4>Hello, I'm</h4>
                             <br>
@@ -175,7 +175,7 @@
     Projects-->
 
     <div class="container my-4" id="Projects">
-        <h2 class="display-4">Skills</h2>
+        <h2 class="display-4"><ins>What to hire me for</ins></h2>
         <div class="row align-items-center gx-5">
             <div class="col-md-3 text-center">
                 <h4>Business Development</h4>
@@ -248,7 +248,7 @@
                 </div>
             </div>
             <div class="col-md-3 text-center">
-                <h4>web3/NFT/Blockchain</h4>
+                <h4>web3 Dev</h4>
                 <img src="documentation/img/logosAndBadges/PaletaPal(rare).png"
                      class="img-responsive d-inlined-flex rounded-circle shake" width="150" height="150" alt="rare paleta pal"
                      data-bs-target="#nft" data-bs-toggle="modal">
