--- a/public_html/index.html
+++ b/public_html/index.html
@@ -313,7 +313,7 @@
 
     <!--//Contact Form//-->
     <div class="container my-4">
-        <h2 class="ml-5 display-2" id="contactForm"> Contact Me</h2>
+        <h2 class="m-5 display-2" id="contactForm"> Contact Me</h2>
 
         <div class="row m-1 d-flex justify-text-end">
             <h4>Let's connect. Follow my social channels or send me a quick message on how we can work together</h4>
@@ -382,6 +382,7 @@
         <div id="output-area"></div>
 
 
+    </div>
     </div>
 
 
