updated tech stack, projects and why to hire with new info

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -92,9 +92,9 @@
     <!--Skills-->
     <section>
         <div class="container-fluid">
-            <div class="row p-4 img-fluid">
+            <div class="row p-2 img-fluid">
                 <div class="col">
-                    <h6>Current Languages:</h6>
+                    <h6>Current Tech Stack:</h6>
                 </div>
                 <div class="col">
                     <img src="documentation/img/logosAndBadges/js.png" alt="javascript" width="50em" height="50em">
@@ -104,6 +104,14 @@
                 </div>
                 <div class="col">
                     <img src="documentation/img/logosAndBadges/html.png" alt="html5" width="50rem" height="50rem">
+                </div>
+                <div class="col">
+                    <img src="documentation/img/logosAndBadges/python_icon.png" alt="python" width="50rem"
+                         height="50rem">
+                </div>
+                <div class="col">
+                    <img src="documentation/img/logosAndBadges/solidity.png" alt="solidity" width="50rem"
+                         height="50rem">
                 </div>
                 <div class="col">
                     <img src="documentation/img/logosAndBadges/css.png" alt="css" width="50rem" height="50rem">
@@ -122,10 +130,10 @@
                 <div class="col">
                     <img src="documentation/img/logosAndBadges/pr.png" alt="adobe premier" width="40rem" height="40rem" class="mt-2">
                 </div>
+                
             </div>
-            <div class="row p-4">
+           <!-- <div class="row p-4">
                 <div class="col">
-                    <h6>Future languages:</h6>
                 </div>
                 <div class="col">
                     <img src="documentation/img/logosAndBadges/python_icon.png" alt="python" width="25rem"
@@ -139,6 +147,7 @@
 
         </div>
     </section>
+-->
     <!--
     About Me Section
     -->
@@ -174,12 +183,12 @@
     <!--
     Projects-->
 
-    <div class="container my-4" id="Projects">
+    <div class="container my-4" id="what to hire me for">
         <h2 class="display-4"><ins>What to hire me for</ins></h2>
         <div class="row align-items-center gx-5">
             <div class="col-md-3 text-center">
-                <h4>Business Development</h4>
-                <img src="documentation/img/logosAndBadges/wallstreetBets.jpeg"
+                <h4 data-bs-target="#bizDev" data-bs-toggle="modal">Business Development</h4>
+                <!--<img src="documentation/img/logosAndBadges/wallstreetBets.jpeg"
                      class="d-inline-flex rounded-circle mb-3 shake"
                      width="150" height="150" alt="Money man" data-bs-target="#bizDev" data-bs-toggle="modal">
 
@@ -216,8 +225,8 @@
                 </div>
             </div>
             <div class="col-md-3 text-center">
-                <h4>Creative Services</h4>
-                <img src="documentation/img/logosAndBadges/Doge%20square.png" class="d-inline-flex rounded-circle mb-3 shake"
+                <h4 data-bs-target="#creative" data-bs-toggle="modal">Creative Services</h4>
+                <!--<img src="documentation/img/logosAndBadges/Doge%20square.png" class="d-inline-flex rounded-circle mb-3 shake"
                      width="150" height="150" alt="Money man" data-bs-target="#creative" data-bs-toggle="modal">
                 <!--<a href="https://imgflip.com/i/5thfwl"><img src="https://i.imgflip.com/5thfwl.jpg"
                                                             class="d-inline-flex mb-3" alt="rare paleta pal"
@@ -248,8 +257,8 @@
                 </div>
             </div>
             <div class="col-md-3 text-center">
-                <h4>web3 Dev</h4>
-                <img src="documentation/img/logosAndBadges/PaletaPal(rare).png"
+                <h4 data-bs-target="#nft" data-bs-toggle="modal">Web Development</h4>
+                <!--<img src="documentation/img/logosAndBadges/PaletaPal(rare).png"
                      class="img-responsive d-inlined-flex rounded-circle shake" width="150" height="150" alt="rare paleta pal"
                      data-bs-target="#nft" data-bs-toggle="modal">
                 <!-- Modal -->
@@ -265,13 +274,151 @@
                             <div class="modal-body">
                                 Web 1.0 introduced the internet. Web 2.0 introduced social media and Web 3 is about to
                                 revolutionize
-                                how we consume content and how we physically live. With large companies already jumping
+                                how we monetize the content we create. With large companies already jumping
                                 into
                                 blockchain and NFT technologies the future is bright for Web 3 developers. We specialize
                                 in
                                 blockchain technologies and Solidity development as well as creating Non-fungible tokens
                                 for
                                 business with massive utility.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Learn More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 text-center">
+                <h4 data-bs-target="#SF" data-bs-toggle="modal">Smart Contract Development</h4>
+                <!--<img src="documentation/img/logosAndBadges/Salesforce2.png"
+                     class="d-inlined-flex shake" width="175" height="175" alt="Salesforce Logo"
+                     data-bs-target="#SF" data-bs-toggle="modal">
+                <!-- Modal -->
+                <div class="modal fade" id="SF" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Salesforce</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Smart Contracts have the ability to disrupt legacy business models. A smart contract can be used in a variety of applications that including housing deeds, investment contracts and other use cases. 
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Learn More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container my-4" id="Projects">
+        <h2 class="display-4"><ins>Projects</ins></h2>
+        <div class="row align-items-center gx-5">
+            <div class="col-md-3 text-center">
+                <h4>Pop Fizz</h4>
+                <img src="documentation/img/logosAndBadges/Pop Fizz All Natural Paletas graphic colorized.png"
+                     class="d-inline-flex rounded-circle mb-3 shake"
+                     width="150" height="150" alt="Money man" data-bs-target="#PF" data-bs-toggle="modal">
+
+                <!-- Modal -->
+                <div class="modal fade" id="PF" tabindex="-1" role="dialog" aria-labelledby="ModalLongTitle"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="ModalLongTitle">Business Development</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                    <!--
+                                                                    <span aria-hidden="true">&times;</span>
+                                    -->
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                               Pop Fizz is the brain child of Carlos Alvarez, his brother and father.  We have been a mainstay in the ABQ food scene since 2013.  
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Learn More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 text-center">
+                <h4>OpenBet</h4>
+                <img src="documentation/img/logosAndBadges/Doge%20square.png" class="d-inline-flex rounded-circle mb-3 shake"
+                     width="150" height="150" alt="Money man" data-bs-target="#OB" data-bs-toggle="modal">
+                <!--<a href="https://imgflip.com/i/5thfwl"><img src="https://i.imgflip.com/5thfwl.jpg"
+                                                            class="d-inline-flex mb-3" alt="rare paleta pal"
+                                                            width="200" height="200" title="Social Media Help"/></a>
+                <div><a href="https://imgflip.com/memegenerator"></a></div>-->
+                <!-- Modal -->
+                <div class="modal fade" id="OB" tabindex="-1" role="dialog" aria-labelledby="ModalLongTitle2"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="ModalLongTitle2">Creative Services</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                OpenBet is a project that combines computer vision and smart contracts to create a betting app that allows you to connect to AAA fighting games.  This program is currently trained to data from Mortal Kombat 11 but more games will be coming shortly.  
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Learn More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 text-center">
+                <h4>Paleta Pal NFT</h4>
+                <img src="documentation/img/logosAndBadges/PaletaPal(rare).png"
+                     class="img-responsive d-inlined-flex rounded-circle shake" width="150" height="150" alt="rare paleta pal"
+                     data-bs-target="#PPPP" data-bs-toggle="modal">
+                <!-- Modal -->
+                <div class="modal fade" id="PPPP" tabindex="-1" role="dialog" aria-labelledby="ModalLongTitle3"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="ModalLongTitle3">NFT and Blockchain</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                               Paleta Pals is a NFT project created by Pop Fizz.  This NFT allows for each holder to hold an official license to open up their own Pop Fizz storefront or truck in their physical geography.  If the user decides to execute their rights they can burn their NFT and receive a seperate NFT that provides access to a gated website and database with all of our proprietary information and processes.  We also provide access to our business training courses that will ensure you are successful as a Pop Fizz owner. 
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Learn More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 text-center">
+                <h4>PodPal</h4>
+                <img src="documentation/img/logosAndBadges/Salesforce2.png"
+                     class="d-inlined-flex shake" width="175" height="175" alt="Salesforce Logo"
+                     data-bs-target="#PP" data-bs-toggle="modal">
+                <!-- Modal -->
+                <div class="modal fade" id="PP" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Salesforce</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                PodPal is a friend finder app that connects people based on their preference in podcasts.  We believe that the podcasts you listen to dictate your true interests.
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-primary">Learn More</button>
@@ -309,6 +456,7 @@
             </div>
         </div>
     </div>
+
 
 
     <!--//Contact Form//-->
